wrote readme, made option.ini defaults better

--- a/options.ini
+++ b/options.ini
@@ -7,16 +7,16 @@ minimumDelay = 3
 maximumDelay = 10
 
 #This is the folder your savestates are located
-savestatePath = C:\Users\Aurora\AppData\Local\VirtualStore\Program Files (x86)\Project64 1.6\Save
+savestatePath = C:\Users\[username]\AppData\Local\VirtualStore\Program Files (x86)\Project64 1.6\Save
 
 #This is how many savestates you've set up
-totalSlots = 3
+totalSlots = 10
 
 #This is how many "instances" you want to play
-slotCount = 3
+slotCount = 10
 
 #Turns the tts audio on / off
 useAudio = yes
 
 #This is the name of the savestate, so the game knows what to rename them to
-savestateName = DOG COLLAB
+savestateName = SUPER MARIO 64
