--- a/options.ini
+++ b/options.ini
@@ -20,3 +20,17 @@ useAudio = yes
 
 #This is the name of the savestate, so the game knows what to rename them to
 savestateName = SUPER MARIO 64
+
+#This is the file extension for savestates that your emu uses, so it knows how to switch it. Change any number to @!
+fileExtension = .pj@.zip
+
+#These are the keys you use to Save & Load states in your emulator. If they're not already, please make them single-key binds!
+savestateKey = F5
+loadstateKey = F7
+
+#These are the keys you use to change to Savestate Slot 1 & Savestate Slot 2. If they're not already, please make them single-key binds!
+slot1Key = 1
+slot2Key = 2
+
+#This setting just removes your ability to see the countdown, and how many instances you have left
+hardMode = no
