fixed the 'file is in use' error by giving the user another option. Simplified the file loading system.

--- a/options.ini
+++ b/options.ini
@@ -6,6 +6,9 @@ minimumDelay = 3
 #This is the maximum amount of time (in seconds) before switching games
 maximumDelay = 10
 
+#This is the delay between saving the state and loading the next one. Make sure this gives time for the emu to fully save the state!
+saveDelay = 0.5
+
 #This is the folder your savestates are located
 savestatePath = C:\Users\[username]\AppData\Local\VirtualStore\Program Files (x86)\Project64 1.6\Save
 
@@ -28,9 +31,8 @@ fileExtension = .pj@.zip
 savestateKey = F5
 loadstateKey = F7
 
-#These are the keys you use to change to Savestate Slot 1 & Savestate Slot 2. If they're not already, please make them single-key binds!
-slot1Key = 1
-slot2Key = 2
+#This is the key you use to change to Savestate Slot 1. If they're not already, please make them single-key binds!
+slotKey = 1
 
 #This setting just removes your ability to see the countdown, and how many instances you have left
 hardMode = no
