Compatibility for emulators that put the savestate slot in the file name instead

--- a/options.ini
+++ b/options.ini
@@ -21,10 +21,10 @@ slotCount = 10
 #Turns the tts audio on / off
 useAudio = yes
 
-#This is the name of the savestate, so the game knows what to rename them to
+#This is the name of the savestate, so the game knows what to rename them to. Change any savestate number to @!
 savestateName = SUPER MARIO 64
 
-#This is the file extension for savestates that your emu uses, so it knows how to switch it. Change any number to @!
+#This is the file extension for savestates that your emu uses, so it knows how to switch it. Change any savestate number to @!
 fileExtension = .pj@.zip
 
 #These are the keys you use to Save & Load states in your emulator. If they're not already, please make them single-key binds!
