Fixed a major bug that I didn't know was major

--- a/options.ini
+++ b/options.ini
@@ -16,23 +16,20 @@ savestatePath = C:\Users\[username]\AppData\Local\VirtualStore\Program Files (x8
 totalSlots = 10
 
 #This is how many "instances" you want to play
-slotCount = 10
+slotToPlay = 10
 
 #Turns the tts audio on / off
 useAudio = yes
 
-#This is the name of the savestate, so the game knows what to rename them to. Change any savestate number to @!
-savestateName = SUPER MARIO 64
+#This is the name of the savestate, so the game knows what to rename them to. Change the savestate slot number to @!
+savestateFile = SUPER MARIO 64.pj@.zip
 
-#This is the file extension for savestates that your emu uses, so it knows how to switch it. Change any savestate number to @!
-fileExtension = .pj@.zip
+#This is the key you use to change to Savestate Slot @ (from above). If they're not already, please make them single-key binds!
+slotKey = 1
 
 #These are the keys you use to Save & Load states in your emulator. If they're not already, please make them single-key binds!
 savestateKey = F5
 loadstateKey = F7
 
-#This is the key you use to change to Savestate Slot 1. If they're not already, please make them single-key binds!
-slotKey = 1
-
-#This setting just removes your ability to see the countdown, and how many instances you have left
+#This setting just removes your ability to see the countdown, and how many instances you have left (in the console only!)
 hardMode = no
