new option: obsText implemented

--- a/options.ini
+++ b/options.ini
@@ -19,7 +19,7 @@ totalSlots = 10
 slotsToPlay = 10
 
 #Turns the tts audio on / off
-useAudio = yes
+useAudio = no
 
 #This is the name of the savestate, so the game knows what to rename them to. Change the savestate slot number to @!
 savestateFile = SUPER MARIO 64.pj@.zip
@@ -30,6 +30,9 @@ slotKey = 1
 #These are the keys you use to Save & Load states in your emulator. If they're not already, please make them single-key binds!
 savestateKey = F5
 loadstateKey = F7
+
+#This is what the text in OBS will say
+obsText = INSTANCES LEFT
 
 #This setting just removes your ability to see the countdown, and how many instances you have left (in the console only!)
 hardMode = no
