--- a/options.ini
+++ b/options.ini
@@ -16,7 +16,7 @@ savestatePath = C:\Users\[username]\AppData\Local\VirtualStore\Program Files (x8
 totalSlots = 10
 
 #This is how many "instances" you want to play
-slotsToPlay = 10
+slotCount = 10
 
 #Turns the tts audio on / off
 useAudio = no
